Update valentine message with emojis

--- a/index.html
+++ b/index.html
@@ -169,7 +169,7 @@
             fill="#ff7aa2"/>
     </svg>
 
-    <h1>manjira will you be my valentine?</h1>
+    <h1>Manjira💕💟 will you be my valentine?</h1>
 
     <section class="button-zone" id="zone">
       <button id="yesBtn">Yes</button>
